# interviews-ai

./: .gitignore  IMPROVEMENTS.md  README.md  ingest.py  langgraph.json  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
data/: company_policies.txt  salary_bands_internal_only.txt
data/archived_docs/: doc_0_3829.txt  doc_10_2712.txt  doc_11_3701.txt  doc_12_2343.txt  doc_13_5914.txt  doc_14_6548.txt  doc_15_8151.txt  doc_16_6115.txt  doc_17_1283.txt  doc_18_6498.txt  doc_19_2327.txt  doc_1_1405.txt  doc_20_2786.txt  doc_21_3658.txt  doc_22_1835.txt  doc_23_9403.txt  doc_24_7679.txt  doc_25_8143.txt  doc_26_9337.txt  doc_27_1415.txt  doc_28_5281.txt  doc_29_2874.txt  doc_2_7740.txt  doc_30_7530.txt  doc_31_7387.txt  doc_32_7034.txt  doc_33_5959.txt  doc_34_8134.txt  doc_35_8120.txt  doc_36_7519.txt  doc_37_6116.txt  doc_38_2003.txt  doc_39_3056.txt  doc_3_2070.txt  doc_40_8269.txt  doc_41_3485.txt  doc_42_3488.txt  doc_43_2523.txt  doc_44_3960.txt  doc_45_5923.txt  (+10 more)
src/: graph.py  state.py
src/nodes/: generation.py  retrieval.py
